--- a/Languages/default-it.xml
+++ b/Languages/default-it.xml
@@ -17,7 +17,7 @@
 		description="Shareaza Default Italian Skin File"
 		link="http://www.shareaza.com/"
 		email="contact@shareaza.com"
-		version="2.2.5.5"
+		version="2.3.0.0"
 		type="Language"
 		language="it"
 		prompt="Clicca qui per selezionare l'Italiano come lingua predefinita."
@@ -554,6 +554,7 @@
 			<item id="ID_LIBRARY_FOLDERS" text="_Condividi file..."/>
 			<item id="ID_TOOLS_DOWNLOAD" text="_Scarica file..."/>
 			<item id="IDC_IMPORT_DOWNLOADS" text="_Importa download parziali di eMule (.part)..."/>
+			<item id="ID_OPEN_DOWNLOADS_FOLDER" text="_Apri la cartella dei download completati"/>
 			<separator/>
 			<item id="ID_TOOLS_SKIN" text="S_kin..."/>
 			<item id="ID_TOOLS_LANGUAGE" text="_Lingua..."/>
@@ -638,6 +639,7 @@
 			<item id="ID_LIBRARY_FOLDERS" text="_Condividi file..."/>
 			<item id="ID_TOOLS_DOWNLOAD" text="_Scarica file..."/>
 			<item id="IDC_IMPORT_DOWNLOADS" text="_Importa download parziali di eMule (.part)..."/>
+			<item id="ID_OPEN_DOWNLOADS_FOLDER" text="_Apri la cartella dei download completati"/>
 			<separator/>
 			<item id="ID_TOOLS_SKIN" text="S_kin..."/>
 			<item id="ID_TOOLS_LANGUAGE" text="_Lingua..."/>
@@ -1628,6 +1630,8 @@
 			<text id="LibraryVolume" format="b">%s</text>
 			<newline gap="0"/>
 			<link format="bu" target="raza:command:ID_VIEW_LIBRARY">La mia libreria</link>
+			<newline gap="4"/>
+			<link format="bu" target="raza:shell:downloads">Apri la cartella dei download completati</link>
 			<group id="1">
 				<newline gap="8"/>
 				<text>Shareaza sta esaminando ed elaborando </text>
